--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ language: node_js
 node_js:
 - '4'
 
-install:
-  - npm install -g bower
-
 env:
   global:
     - SAUCE_USERNAME=opbeat
@@ -18,6 +15,11 @@ env:
     - MODE=default ANGULAR_VERSION="~1.4.0"
     - MODE=default ANGULAR_VERSION="~1.5.0"
 
+install:
+  - npm install -g bower
+  - npm install
+  - (cd e2e_test && npm install && npm install angular@$ANGULAR_VERSION angular-animate@$ANGULAR_VERSION angular-resource@$ANGULAR_VERSION angular-route@$ANGULAR_VERSION)
+
 matrix:
   allow_failures:
     - env: "MODE=saucelabs_optional"   
@@ -27,6 +29,5 @@ addons:
   sauce_connect: true
 
 before_script:
-  - (cd e2e_test && npm install && npm install angular@$ANGULAR_VERSION angular-animate@$ANGULAR_VERSION angular-resource@$ANGULAR_VERSION angular-route@$ANGULAR_VERSION)
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
